--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>My first github repo</title>
 </head>
 <body>
-    
+    <h2>Hello world</h2>
+    <p>I am learning coding.I will be a webdeveloper insa allah.</p>
 </body>
 </html>
