--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
     <h2>Hello world</h2>
     <p>I am learning coding.I will be a webdeveloper insa allah.</p>
+    <img src="dragon.jpg" alt="dragon">
     <p>This is my second edit for github</p>
+    <p>imran branch</p>
 </body>
 </html>
